--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,3 +12,15 @@ a {
   display: inline;
   color: black;
 }
+#content {
+  width: 100%;
+  height: 100%;
+}
+.background {
+  width: 100%;
+  height: 100%;
+  background-image: url('../assets/images/Cover.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
