--- a/src/styles/blogs.css
+++ b/src/styles/blogs.css
@@ -1,45 +1,42 @@
-.blogs-main-last {
-  padding: 0 150px;
+.blogs-main {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 50px;
+  font-family: 'Roboto Mono', monospace;
+}
+.blogs-news-container {
   background-color: #e6e9ed;
+  padding: 0 50px 40px;
 }
-.blogs-main-last img {
-  height: 350px;
-}
-.blogs-secondary {
-  margin-top: 50px;
-  padding: 0 150px;
-}
-.blogs-posts {
-  width: 100%;
+.blogs-main-news {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 52px 25px;
-  margin-bottom: 150px;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 2fr;
 }
-.blogs-posts article {
-  text-align: left;
-  font-weight: 500;
-  font-size: 18px;
+.blogs-news-img-container {
+  grid-column: 1;
 }
-.blogs-posts article img {
-  width: 350px;
+.blogs-news-img-container img {
+  width: 85%;
 }
-.blogs-posts article p {
-  margin: 50px 0 50px 0px;
+.blogs-news-info-container {
+  grid-column: 2;
 }
-.blogs-posts article a {
-  display: block;
-  width: 110px;
-  height: 40px;
-  border: 1px solid #47cfad;
-  /* 1. Positioning */
+.blogs-news-info-container p {
+  margin-bottom: 35px;
+}
+.blogs-post-container {
+  padding: 0 50px 40px;
+}
+.blogs-post-container h3 {
+  border-bottom: 1px solid #cdd2da;
+  padding-bottom: 20px;
   text-align: center;
-  /* 3. typography */
-  font-family: 'Roboto', sans-serif;
+}
+.blogs-button {
+  border: 1px solid #47cfac;
+  padding: 10px 15px;
+  font-size: 12px;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 40px;
+}
+.post-container img {
+  width: 350px;
 }
